--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   background-color: var(--primary);
   color: var(--white);
   display: grid;
-  grid-template-columns: 1.5fr 5fr;
+  grid-template-columns: minmax(250px, 600fr) 5fr;
   padding-top: 3rem;
 }
 
