Add border-radius and edit height property for .container css class

--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 70%;
-  height: 17rem;
+  height: 18rem;
   margin: 0 auto;
   background-color: var(--secondary);
+  border-radius: 20px;
 }
