Display flex .container css class and center its elements

--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -4,4 +4,7 @@
   margin: 0 auto;
   background-color: var(--secondary);
   border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
