--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -2,9 +2,9 @@
   width: 70%;
   height: 18rem;
   margin: 0 auto;
+  padding: 1.5rem;
   background-color: var(--secondary);
   border-radius: 20px;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
