--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -13,6 +13,8 @@
 .title {
   color: var(--grey);
   font-size: 1.2rem;
-  border-bottom: 1px solid var(--grey);
+  border-bottom: 1.5px solid var(--grey);
   width: 100%;
+  margin: 0;
+  padding-bottom: 0.6rem;
 }
