--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -6,7 +6,7 @@
   background-color: var(--secondary);
   border-radius: 20px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
 }
 
