Add color and text-transformation to .dropdownBtn

--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -18,3 +18,8 @@
   margin: 0;
   padding-bottom: 0.6rem;
 }
+
+.dropdownBtn {
+  color: var(--white) !important;
+  text-transform: initial !important;
+}
