Add width and display properties to .dropdownBtn

--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -20,6 +20,8 @@
 }
 
 .dropdownBtn {
+  width: 100%;
   color: var(--white) !important;
   text-transform: initial !important;
+  display: flex;
 }
