Change the display property of .dropdownBtn css class to block and set the text align to left

--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -23,5 +23,6 @@
   width: 100%;
   color: var(--white) !important;
   text-transform: initial !important;
-  display: flex;
+  display: block;
+  text-align: left;
 }
