Add a background-color and margin-top to .dropdownBtn css class

--- a/styles/Filters.module.css
+++ b/styles/Filters.module.css
@@ -22,6 +22,8 @@
 .dropdownBtn {
   width: 100%;
   color: var(--white) !important;
+  background-color: var(--primary);
+  margin-top: 0.6rem;
   text-transform: initial !important;
   display: block;
   text-align: left;
