--- a/styles/ProductCategory.module.css
+++ b/styles/ProductCategory.module.css
@@ -11,6 +11,7 @@
   background-color: var(--secondary);
   max-width: 70vw;
   height: 12rem;
+  min-height: 12rem;
   border-radius: 0.8rem;
   color: var(--white);
   display: flex;
